--- a/ProblemSolvingLib/ProblemSolvingLib.csproj
+++ b/ProblemSolvingLib/ProblemSolvingLib.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Extensions.cs" />
     <Compile Include="FairRations.cs" />
+    <Compile Include="Gemstones.cs" />
     <Compile Include="GridSearch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SherlockAndAnagrams.cs" />
