--- a/ProblemSolvingLib/ProblemSolvingLib.csproj
+++ b/ProblemSolvingLib/ProblemSolvingLib.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbsolutePermutation.cs" />
     <Compile Include="AlternatingCharacters.cs" />
     <Compile Include="BiggerIsGreater.cs" />
     <Compile Include="SuffixTree.cs" />
