--- a/ProblemSolvingLib/ProblemSolvingLib.csproj
+++ b/ProblemSolvingLib/ProblemSolvingLib.csproj
@@ -44,6 +44,7 @@
     <Compile Include="AbsolutePermutation.cs" />
     <Compile Include="AlternatingCharacters.cs" />
     <Compile Include="BiggerIsGreater.cs" />
+    <Compile Include="InsertionSort.cs" />
     <Compile Include="MatrixRotation.cs" />
     <Compile Include="SuffixTree.cs" />
     <Compile Include="Extensions.cs" />
