--- a/ProblemSolvingLib/ProblemSolvingLib.csproj
+++ b/ProblemSolvingLib/ProblemSolvingLib.csproj
@@ -46,6 +46,7 @@
     <Compile Include="BiggerIsGreater.cs" />
     <Compile Include="InsertionSort.cs" />
     <Compile Include="MatrixRotation.cs" />
+    <Compile Include="OrganizingContainers.cs" />
     <Compile Include="SuffixTree.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="FairRations.cs" />
