--- a/ProblemSolvingLib/ProblemSolvingLib.csproj
+++ b/ProblemSolvingLib/ProblemSolvingLib.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbsolutePermutation.cs" />
+    <Compile Include="Alternate.cs" />
     <Compile Include="AlternatingCharacters.cs" />
     <Compile Include="BiggerIsGreater.cs" />
     <Compile Include="BigSorting.cs" />
@@ -53,6 +54,7 @@
     <Compile Include="HappyLadybugs.cs" />
     <Compile Include="InsertionSort.cs" />
     <Compile Include="MatrixRotation.cs" />
+    <Compile Include="MinimumNumber.cs" />
     <Compile Include="OrganizingContainers.cs" />
     <Compile Include="SuffixTree.cs" />
     <Compile Include="Extensions.cs" />
